native/gua-core/include/gua/gua.h

typedef struct gua_context_t gua_context_t;
typedef struct gua_bounds_t {
    float x;
    float y;
    float w;
    float h;
} gua_bounds_t;
typedef struct gua_event_t {
    int type;
    char node_id[128];
} gua_event_t;
typedef struct gua_clock_status_t {
    uint32_t struct_size;
    int installed;
    int paused;
    double now_ms;
    double default_step_ms;
    double pending_ms;
    uint64_t generation;
} gua_clock_status_t;
typedef struct gua_clock_step_t {
    uint32_t struct_size;
    double delta_ms;
    int final_step;
    uint64_t generation;
} gua_clock_step_t;
typedef struct gua_action_request_descriptor_t {
    uint32_t struct_size;
    int action;
    const char* node_id;
    const char* value;
    float delta_x;
    float delta_y;
    int bool_value;
    const char* key;
    uint32_t modifiers;
    int sensitive;
    int scroll_unit;
} gua_action_request_descriptor_t;
typedef struct gua_action_request_t {
    uint32_t struct_size;
    uint64_t request_id;
    int action;
    char node_id[128];
    char value[256];
    float delta_x;
    float delta_y;
    int bool_value;
    char key[64];
    uint32_t modifiers;
    int sensitive;
    int scroll_unit;
} gua_action_request_t;
typedef struct gua_action_result_t {
    uint32_t struct_size;
    uint64_t request_id;
    int action;
    int status;
    int error_code;
    const char* node_id;
    const char* value;
    int sensitive;
} gua_action_result_t;
typedef struct gua_event_v2_t {
    uint32_t struct_size;
    uint64_t request_id;
    int action;
    int status;
    int error_code;
    char node_id[128];
    char value[256];
    int sensitive;
} gua_event_v2_t;
typedef struct gua_event_v3_t {
    uint32_t struct_size;
    gua_event_v2_t base;
    uint64_t session_epoch;
    uint64_t frame_sequence;
    uint64_t revision;
} gua_event_v3_t;
typedef struct gua_context_status_t {
    uint32_t struct_size;
    uint64_t session_epoch;
    uint64_t frame_sequence;
    uint64_t revision;
    uint32_t node_count;
    uint32_t pending_request_count;
    uint32_t in_flight_request_count;
    uint32_t unconsumed_event_count;
    uint32_t log_count;
    int has_screenshot;
    int first_pending_action;
    char first_pending_node_id[128];
    int first_event_action;
    char first_event_node_id[128];
    uint64_t world_frame_sequence;
    uint64_t world_revision;
    uint32_t world_object_count;
} gua_context_status_t;
typedef struct gua_reset_options_t {
    uint32_t struct_size;
    uint32_t flags;
    int strict;
    uint64_t expected_session_epoch;
    uint32_t flags_version;
} gua_reset_options_t;
typedef struct gua_reset_report_t {
    uint32_t struct_size;
    int result;
    uint64_t previous_session_epoch;
    uint64_t session_epoch;
    uint32_t pending_request_count;
    uint32_t in_flight_request_count;
    uint32_t unconsumed_event_count;
    uint32_t discarded_node_count;
    uint32_t discarded_pending_request_count;
    uint32_t discarded_in_flight_request_count;
    uint32_t discarded_event_count;
    uint32_t discarded_log_count;
    int discarded_screenshot;
    int first_pending_action;
    char first_pending_node_id[128];
    int first_event_action;
    char first_event_node_id[128];
    uint32_t discarded_world_object_count;
} gua_reset_report_t;
typedef struct gua_world_object_descriptor_v1_t {
    uint32_t struct_size;
    const char* id;
    const char* parent_id;
    const char* kind;
    const char* label;
    const char* description;
    int space;
    double position_x;
    double position_y;
    double position_z;
    int visible_to_player;
    int active;
    int agent_exposure;
    const char* domain_id;
    const char* related_ui_node_id;
    const char* const* tags;
    uint32_t tag_count;
    const gua_world_state_value_v1_t* state_values;
    uint32_t state_value_count;
} gua_world_object_descriptor_v1_t;
typedef struct gua_world_selector_v1_t {
    uint32_t struct_size;
    const char* id;
    int id_match;
    const char* kind;
    int kind_match;
    const char* label;
    int label_match;
    const char* tag;
    int tag_match;
    const char* parent_id;
    int direct_child;
    int visible_to_player;
    int active;
    const gua_world_state_value_v1_t* state;
} gua_world_selector_v1_t;
typedef struct gua_node_state_t {
    int visible;
    int enabled;
} gua_node_state_t;
typedef struct gua_node_descriptor_v2_t {
    uint32_t struct_size;
    uint64_t known_mask;
    const char* id;
    const char* parent_id;
    const char* role;
    const char* label;
    const char* text;
    const char* value;
    gua_bounds_t bounds;
    int visible;
    int enabled;
    int focused;
    int hovered;
    int pressed;
    int checked;
    int selected;
} gua_node_descriptor_v2_t;
typedef struct gua_node_state_v2_t {
    uint32_t struct_size;
    uint64_t known_mask;
    int visible;
    int enabled;
    int focused;
    int hovered;
    int pressed;
    int checked;
    int selected;
    char parent_id[128];
    char text[256];
    char value[256];
} gua_node_state_v2_t;
typedef struct gua_node_descriptor_v3_t {
    uint32_t struct_size;
    gua_node_descriptor_v2_t base;
    int64_t caret_position, selection_start, selection_end;
    double scroll_x, scroll_y, scroll_max_x, scroll_max_y;
    double range_value, range_min, range_max;
    int64_t selected_index;
} gua_node_descriptor_v3_t;
typedef struct gua_selector_v1_t {
    uint32_t struct_size;
    const char* id;
    int id_match;
    const char* role;
    int role_match;
    const char* name;
    int name_match;
    const char* text;
    int text_match;
    const char* parent_id;
    int direct_child;
    int visible;
    int enabled;
} gua_selector_v1_t;
gua_context_t* gua_create_context(void);
void gua_destroy_context(gua_context_t* ctx);
void gua_begin_frame(gua_context_t* ctx, const char* screen);
void gua_end_frame(gua_context_t* ctx);
void gua_register_node(
    gua_context_t* ctx,
    const char* id,
    const char* role,
    const char* label,
    gua_bounds_t bounds,
    int visible,
    int enabled
);
int gua_register_node_v2(gua_context_t* ctx, const gua_node_descriptor_v2_t* descriptor);
int gua_register_node_v3(gua_context_t* ctx, const gua_node_descriptor_v3_t* descriptor);
const char* gua_get_ui_tree_json(gua_context_t* ctx);
/* Returns the required byte size including the trailing NUL. Output is NUL-terminated when out_json_size > 0. */
int gua_copy_ui_tree_json(gua_context_t* ctx, char* out_json, int out_json_size);
void gua_add_log(gua_context_t* ctx, int level, const char* message);
const char* gua_get_logs_json(gua_context_t* ctx);
/* Returns the required byte size including the trailing NUL. Output is NUL-terminated when out_json_size > 0. */
int gua_copy_logs_json(gua_context_t* ctx, char* out_json, int out_json_size);
void gua_set_screenshot(gua_context_t* ctx, const char* data_uri, int width, int height);
const char* gua_get_screenshot_json(gua_context_t* ctx);
/* Returns the required byte size including the trailing NUL. Output is NUL-terminated when out_json_size > 0. */
int gua_copy_screenshot_json(gua_context_t* ctx, char* out_json, int out_json_size);
/* Configures the bounded diagnostics history. A limit of 0 disables retained history. */
int gua_set_diagnostics_history_limit(gua_context_t* ctx, uint32_t history_limit);
/* Stores caller-provided environment metadata as a JSON object for later diagnostics capture. */
int gua_set_diagnostics_environment_json(gua_context_t* ctx, const char* environment_json);
/* Returns the required byte size including the trailing NUL. Output is NUL-terminated when out_json_size > 0. */
int gua_copy_diagnostics_json(gua_context_t* ctx, char* out_json, int out_json_size);
/* Returns version/capability JSON. The required byte size includes the trailing NUL. */
int gua_copy_version_json(char* out_json, int out_json_size);
int gua_clock_install(gua_context_t* ctx, double initial_time_ms, double step_ms);
int gua_clock_pause(gua_context_t* ctx);
int gua_clock_run_for(gua_context_t* ctx, double duration_ms, double step_ms);
int gua_clock_resume(gua_context_t* ctx);
int gua_clock_get_status(gua_context_t* ctx, gua_clock_status_t* out_status);
int gua_clock_consume_step(gua_context_t* ctx, gua_clock_step_t* out_step);
int gua_get_node_state(gua_context_t* ctx, const char* node_id, gua_node_state_t* out_state);
/* Returns 0 rather than a partial state when a v2 string does not fit its fixed output buffer. */
int gua_get_node_state_v2(gua_context_t* ctx, const char* node_id, gua_node_state_v2_t* out_state);
int gua_find_node_by_id(gua_context_t* ctx, const char* node_id, char* out_node_id, int out_node_id_size);
int gua_find_node_by_role(gua_context_t* ctx, const char* role, const char* name, char* out_node_id, int out_node_id_size);
int gua_find_node_by_text(gua_context_t* ctx, const char* text, char* out_node_id, int out_node_id_size);
/* Returns the required JSON byte size including the trailing NUL. The result contains valid, matches, and optional error fields. */
int gua_query_nodes_json(gua_context_t* ctx, const gua_selector_v1_t* selector, char* out_json, int out_json_size);
int gua_begin_world_frame(gua_context_t* ctx, const char* scene);
int gua_register_world_object_v1(gua_context_t* ctx, const gua_world_object_descriptor_v1_t* descriptor);
int gua_end_world_frame(gua_context_t* ctx);
int gua_abort_world_frame(gua_context_t* ctx);
int gua_copy_world_object_tree_json(gua_context_t* ctx, int observation_profile, char* out_json, int out_json_size);
int gua_query_world_objects_json(gua_context_t* ctx, const gua_world_selector_v1_t* selector, int observation_profile, char* out_json, int out_json_size);
int gua_enqueue_click(gua_context_t* ctx, const char* node_id);
int gua_consume_click_request(gua_context_t* ctx, const char* node_id);
int gua_emit_click(gua_context_t* ctx, const char* node_id);
int gua_poll_event(gua_context_t* ctx, gua_event_t* out_event);
int gua_enqueue_action(gua_context_t* ctx, const gua_action_request_descriptor_t* descriptor, uint64_t* out_request_id);
/* Cancels only a queued, not-yet-consumed request. Returns GUA_ACTION_CANCEL_* above. */
int gua_cancel_action_request(gua_context_t* ctx, uint64_t request_id);
int gua_consume_action_request(gua_context_t* ctx, int action, const char* node_id, gua_action_request_t* out_request);
int gua_emit_action_result(gua_context_t* ctx, const gua_action_result_t* result);
int gua_poll_event_v2(gua_context_t* ctx, gua_event_v2_t* out_event);
int gua_poll_event_v2_for_request(gua_context_t* ctx, uint64_t request_id, gua_event_v2_t* out_event);
int gua_poll_event_v3(gua_context_t* ctx, gua_event_v3_t* out_event);
int gua_poll_event_v3_for_request(gua_context_t* ctx, uint64_t request_id, gua_event_v3_t* out_event);
int gua_get_context_status(gua_context_t* ctx, gua_context_status_t* out_status);
int gua_reset_context(gua_context_t* ctx, const gua_reset_options_t* options, gua_reset_report_t* out_report);